--- a/pom.xml
+++ b/pom.xml
@@ -4,22 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.Bteducation.com</groupId>
-    <artifactId>TestMavenProject</artifactId>
+    <groupId>org.bta</groupId>
+    <artifactId>lessons-java5</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
-    </properties>
-
     <dependencies>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.6.1.Final</version>
-        </dependency>
-
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -28,59 +17,10 @@
 
     </dependencies>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
-    <profiles>
-        <profile>
-            <id>scanner</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.jolira</groupId>
-                        <artifactId>onejar-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <configuration>
-                                    <mainClass>org.bta.java5.MainScanner</mainClass>
-                                    <attachToBuild>true</attachToBuild>
-                                    <filename>
-                                        executable.${project.packaging}
-                                    </filename>
-                                </configuration>
-                                <goals>
-                                    <goal>one-jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>simple</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.jolira</groupId>
-                        <artifactId>onejar-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <configuration>
-                                    <mainClass>org.bta.java5.Main</mainClass>
-                                    <attachToBuild>true</attachToBuild>
-                                    <filename>
-                                        executable.${project.packaging}
-                                    </filename>
-                                </configuration>
-                                <goals>
-                                    <goal>one-jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-    </profiles>
 
 </project>
